Allow specifying placeholder texts for name and email entry fields

The placeholder texts can be specified in the configuration file via
CN_placeholder, NAME_placeholder, and EMAIL_placeholder similar to the
*_label and *_regex settings.

Because the config entries keys are calculated dynamically, KConfig is
used directly for reading the settings. The definition via KConfigXT
currently only serves as documentation.

GnuPG-bug-id: 5690